2015-03-25  Jonathan Wakely  <jwakely@redhat.com>

	Backport from mainline
	2015-03-02  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/65279
	* include/std/scoped_allocator (__inner_type_impl,
	scoped_allocator_adaptor): Add defaulted copy assignment and move
	assignment operators.
	* testsuite/20_util/scoped_allocator/65279.cc: New.

2015-03-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/65543
	* include/std/istream (operator>>(basic_istream<>&&, _Tp&): Revert
	thinko in r150387.
	* include/std/ostream (operator<<(basic_ostream<>&&, const _Tp&):
	Likewise.
	* testsuite/27_io/rvalue_streams-2.cc: New.

2015-02-03  Tim Shen  <timshen@google.com>

	PR libstdc++/64680
	Backported from mainline
	2015-01-22  Tim Shen  <timshen@google.com>

	* include/bits/regex.h (basic_regex<>::basic_regex,
	basic_regex<>::operator=, basic_regex<>::imbue): Conform to the
	standard interface.
	* testsuite/28_regex/basic_regex/assign/char/cstring.cc: New testcase.

2015-02-03  Tim Shen  <timshen@google.com>

	PR libstdc++/64649
	Backported from mainline
	2015-01-22  Tim Shen  <timshen@google.com>

	* include/bits/regex.tcc (regex_traits<>::lookup_collatename,
	regex_traits<>::lookup_classname): Correctly narrow input chars.
	* testsuite/28_regex/traits/wchar_t/user_defined.cc: New testcase.

2015-01-19  Tim Shen  <timshen@google.com>

	PR libstdc++/64649
	Backported from mainline
	2015-01-19  Tim Shen  <timshen@google.com>

	* include/bits/regex.tcc (regex_traits<>::lookup_collatename,
	regex_traits<>::lookup_classname): Support forward iterators.
	* testsuite/28_regex/traits/char/lookup_classname.cc: New testcases.
	* testsuite/28_regex/traits/char/lookup_collatename.cc: New testcase.

2015-01-19  Tim Shen  <timshen@google.com>

	PR libstdc++/64584
	PR libstdc++/64585
	* include/bits/regex.h (basic_regex<>::basic_regex,
	basic_regex<>::assign, basic_regex<>::imbue,
	basic_regex<>::swap, basic_regex<>::mark_count): Drop NFA after